# electro

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  Makefile  Procfile  README.md  main.py  pyproject.toml
docs/source/: electro.toolkit.rst
electro/: app.py  assistant_functions.py  auth_dependencies.py  authentication.py  chat_router.py  enums.py  exceptions.py  flow.py  flow_block.py  flow_connector.py  flow_manager.py  flow_step.py  helpers.py  interfaces.py  models.py  schemas.py  scopes.py  settings.py  storage.py  substitutions.py  triggers.py  types_.py  utils.py
electro/contrib/: buttons.py  steps.py  storage_buckets.py  storage_substitutions.py  views.py
electro/toolkit/: decorators.py  i18n.py  i18n_gettext.py  loguru_logging.py  memory_storage.py  redis_storage.py  tortoise_orm.py  whisper_client.py
electro/toolkit/files_storage/: __init__.py  universal_file_storage.py
electro/toolkit/files_storage/storage_services/: __init__.py  _base_storage_service.py  azure_blob_storage_service.py  s3_service.py
electro/toolkit/images_storage/: universal_image_storage.py
electro/toolkit/images_storage/storage_services/: _base_storage_service.py  azure_blob_storage_service.py  s3_service.py
examples/: .env.example  Makefile  i18n_gettext.py  test_flow.py
examples/locales/en/LC_MESSAGES/: messages.po
examples/locales/fr/LC_MESSAGES/: messages.po
