[project]
name = "electro"
version = "0.12.2"
description = "A framework for building bots, made for humans."
authors = [{ name = "Mykola Solodukha", email = "mykola@mykolasolodukha.me" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "stringcase>=1.2.0,<2",
    "loguru>=0.7.2,<0.8",
    "openai>=1.36.0,<2",
    "pydantic-settings>=2.3.4,<3",
    "pydantic>=2.8.2,<3",
    "dj-redis-url>=0.1.4,<0.2",
    "redis>=5.0.7,<6",
    "tortoise-orm[asyncpg]>=0.21.5,<0.22",
    "aerich>=0.7.2,<0.8",
    "tenacity>=8.5.0,<9",
    "py-cord",
    "aioboto3>=13.1.1,<14",
    "azure-storage-blob>=12.23.1,<13",
    "azure-identity>=1.18.0,<2",
    "fastapi[standard]>=0.115.5,<1.0.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "isort>=5.13.2,<6",
    "pylint>=3.2.6,<4",
    "pydocstyle[toml]>=6.3.0,<7",
    "sphinx>=8.2.0,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "autodoc-pydantic>=2.2.0,<3",
    "sphinx-autodoc-typehints>=3.0.1,<4",
]

[tool.uv]

[tool.uv.sources]
py-cord = { git = "https://github.com/mykolasolodukha/pycord.git", rev = "d8070a90a8ec12dbc64b703513c14fa80834861d" }

[tool.hatch.build.targets.sdist]
include = ["./electro"]

[tool.hatch.build.targets.wheel]
include = ["./electro"]

[tool.hatch.build.targets.wheel.sources]
"./electro" = "electro"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]
verbose = false
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["electro"]
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_first_party = ["electro"]
filter_files = true
force_alphabetical_sort_within_sections = true

[tool.pylint.main]
max-line-length = 120  # the maximum length of a line
disable = ["fixme"]  # ignore TODOs and FIXMEs
source-roots = ["electro"]  # the source roots for pylint to check
ignore-patterns = ["tests", "migrations"]  # ignore the tests and migrations folders

[tool.pydocstyle]
match-dir = "(?!tests|migrations).*"  # exclude the tests and migrations folders

[tool.aerich]
tortoise_orm = "electro.toolkit.tortoise_orm.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./../electro"

